--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -14,10 +14,15 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: Set up Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: 'stable'
+      - name: Set up Flutter SDK
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y curl git unzip xz-utils zip libglu1-mesa
+          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
+          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+
+      - name: Flutter Version
+        run: flutter --version
 
       - name: Install Dependencies
         run: flutter pub get
