--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Create Installer
         run: |
-          $APP_NAME="YourAppName"
+          $APP_NAME="structogrammar"
           $BUILD_DIR="build\windows\runner\Release\$APP_NAME.exe"
           $ZIP_DIR="$env:GITHUB_WORKSPACE\build\windows\zip"
           mkdir $ZIP_DIR
