--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -16,17 +16,10 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Flutter SDK
-        run: |
-          # Clone Flutter SDK
-          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
-          
-          # Update PATH for the current session
-          $env:GITHUB_PATH += ";$env:GITHUB_WORKSPACE/flutter/bin"
-          
-          # Verify Flutter is available
-          echo $env:GITHUB_PATH
-          flutter --version
-        shell: pwsh
+        uses: subosito/flutter-action@v2
+        with:
+          flutter-version: '3.24.2' # Specify the desired Flutter version
+          channel: 'stable'
 
       - name: Install Dependencies
         run: flutter pub get
