--- a/.github/workflows/mac.yml
+++ b/.github/workflows/mac.yml
@@ -1,114 +1,60 @@
-name: Flutter CI
-
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
-jobs:
-  build-and-release-linux:
-    runs-on: ubuntu-22.04
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
-      - name: Install dependencies
-        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5
-      - name: Install project dependencies
-        run: flutter pub get
-      - name: Enable linux build
-        run: flutter config --enable-linux-desktop
-      - name: Build artifacts
-        run: flutter build linux --release
-      - name: Archive Release
-        uses: thedoctor0/zip-release@master
-        with:
-          type: 'zip'
-          filename: structogrammar-${{github.ref_name}}-linux.zip
-          directory: build/linux/x64/release/bundle
-      - name: Linux Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: build/linux/x64/release/bundle/structogrammar-${{github.ref_name}}-linux.zip
-
-  build-and-release-windows:
-    runs-on: windows-latest
-
-    steps:
-      - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
-      - name: Install project dependencies
-        run: flutter pub get
-      - name: Enable windows build
-        run: flutter config --enable-windows-desktop
-      - name: Build artifacts
-        run: flutter build windows --release
-      - name: Archive Release
-        uses: thedoctor0/zip-release@master
-        with:
-          type: 'zip'
-          filename: structogrammar-${{github.ref_name}}-windows.zip
-          directory: build/windows/x64/runner/Release
-      - name: Windows Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: build/windows/x64/runner/Release/structogrammar-${{github.ref_name}}-windows.zip
-
-  build-and-release-macos:
-    name: Build and Release macOS App
-    runs-on: macos-latest
-
-    steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Set up Flutter SDK
-        run: |
-          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
-
-      - name: Flutter Version
-        run: flutter --version
-
-      - name: Install Dependencies
-        run: flutter pub get
-
-      - name: Create a Tag
-        id: tag
-        run: |
-          TAG="v$(date +'%Y%m%d%H%M%S')" # Example tag format
-          git tag $TAG
-          git push origin $TAG
-          echo "TAG=$TAG" >> $GITHUB_ENV
-
-      - name: Build macOS Release
-        run: flutter build macos --release
-
-      - name: Create .dmg File
-        run: |
-          APP_NAME="structogrammar"
-          BUILD_DIR="build/macos/Build/Products/Release/$APP_NAME.app"
-          DMG_DIR="$GITHUB_WORKSPACE/build/macos/dmg"
-          mkdir -p "$DMG_DIR"
-          hdiutil create -volname "$APP_NAME" -srcfolder "$BUILD_DIR" -ov -format UDZO "$DMG_DIR/$APP_NAME.dmg"
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: build/macos/dmg/*.dmg
-          tag_name: ${{ env.TAG }}
+#name: Build macOS
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#  workflow_dispatch:
+#
+#jobs:
+#  build:
+#    name: Build macOS App
+#    runs-on: macos-latest
+#
+#    steps:
+#      - name: Checkout Repository
+#        uses: actions/checkout@v3
+#
+#      - name: Set up Flutter SDK
+#        run: |
+#          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
+#          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+#
+#      - name: Flutter Version
+#        run: flutter --version
+#
+#      - name: Install Dependencies
+#        run: flutter pub get
+#
+#      - name: Create a Tag
+#        id: tag
+#        run: |
+#          TAG="v$(date +'%Y%m%d%H%M%S')" # Example tag format
+#          git tag $TAG
+#          git push origin $TAG
+#          echo "TAG=$TAG" >> $GITHUB_ENV
+#
+#      - name: Build macOS Release
+#        run: flutter build macos --release
+#
+#      - name: Create .dmg File
+#        run: |
+#          APP_NAME="structogrammar"
+#          BUILD_DIR="build/macos/Build/Products/Release/$APP_NAME.app"
+#          DMG_DIR="$GITHUB_WORKSPACE/build/macos/dmg"
+#          mkdir -p "$DMG_DIR"
+#          hdiutil create -volname "$APP_NAME" -srcfolder "$BUILD_DIR" -ov -format UDZO "$DMG_DIR/$APP_NAME.dmg"
+#
+#      - name: Upload macOS Artifact
+#        uses: actions/upload-artifact@v3
+#        with:
+#          name: macos-dmg
+#          path: build/macos/dmg/*.dmg
+#
+#      - name: Create GitHub Release
+#        uses: softprops/action-gh-release@v1
+#        with:
+#          files: build/macos/dmg/*.dmg
+#          tag_name: ${{ env.TAG }}
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
