--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,8 +2,6 @@ name: Flutter CI
 
 on:
   push:
-    branches:
-      - main
     tags:
       - 'v*'
   workflow_dispatch:
@@ -76,6 +74,7 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
+
       - name: Set up Flutter SDK
         run: |
           git clone https://github.com/flutter/flutter.git --branch stable --depth 1
@@ -86,14 +85,6 @@ jobs:
 
       - name: Install Dependencies
         run: flutter pub get
-
-      - name: Create a Tag
-        id: tag
-        run: |
-          TAG="v$(date +'%Y%m%d%H%M%S')" # Example tag format
-          git tag $TAG
-          git push origin $TAG
-          echo "TAG=$TAG" >> $GITHUB_ENV
 
       - name: Build macOS Release
         run: flutter build macos --release
@@ -106,10 +97,17 @@ jobs:
           mkdir -p "$DMG_DIR"
           hdiutil create -volname "$APP_NAME" -srcfolder "$BUILD_DIR" -ov -format UDZO "$DMG_DIR/$APP_NAME.dmg"
 
+      - name: Upload macOS Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: macos-dmg
+          path: build/macos/dmg/*.dmg
+
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           files: build/macos/dmg/*.dmg
-          tag_name: ${{ env.TAG }}
+          tag_name: ${{ github.ref_name }}
