--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,10 +58,11 @@ jobs:
       - name: Create Inno Setup Script
         run: |
           echo '[Setup]' > setup.iss
-          echo 'AppName=Structogrammar' >> setup.iss
+          echo 'AppName=structogrammar' >> setup.iss
           echo 'AppVersion=1.0' >> setup.iss
-          echo 'DefaultDirName={pf}\Structogrammar' >> setup.iss
-          echo 'DefaultGroupName=Structogrammar' >> setup.iss
+          echo 'DefaultDirName={pf}\structogrammar' >> setup.iss
+          echo 'DefaultGroupName=structogrammar' >> setup.iss
+          echo 'OutputDir=Output' >> setup.iss
           echo 'OutputBaseFilename=setup' >> setup.iss
           echo 'Compression=lzma' >> setup.iss
           echo 'SolidCompression=yes' >> setup.iss
@@ -76,7 +77,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: setup.exe
+          files: Output/setup.exe
 
   build-and-release-macos:
     name: Build and Release macOS App
