--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,10 +58,10 @@ jobs:
       - name: Create Inno Setup Script
         run: |
           echo '[Setup]' > setup.iss
-          echo 'AppName=structogrammar' >> setup.iss
+          echo 'AppName=Structogrammar' >> setup.iss
           echo 'AppVersion=1.0' >> setup.iss
-          echo 'DefaultDirName={pf}\structogrammar' >> setup.iss
-          echo 'DefaultGroupName=structogrammar' >> setup.iss
+          echo 'DefaultDirName={pf}\Structogrammar' >> setup.iss
+          echo 'DefaultGroupName=Structogrammar' >> setup.iss
           echo 'OutputDir=Output' >> setup.iss
           echo 'OutputBaseFilename=setup' >> setup.iss
           echo 'Compression=lzma' >> setup.iss
@@ -71,13 +71,16 @@ jobs:
       - name: Create Inno Setup Installer
         run: |
           & 'C:\Program Files (x86)\Inno Setup 6\ISCC.exe' setup.iss
+      - name: Rename Installer
+        run: |
+          Rename-Item -Path Output/setup.exe -NewName structogrammar.exe
       - name: Windows Release
         uses: softprops/action-gh-release@v2
         if: startsWith(github.ref, 'refs/tags/')
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: Output/setup.exe
+          files: Output/structogrammar.exe
 
   build-and-release-macos:
     name: Build and Release macOS App
