--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -101,42 +101,27 @@ jobs:
       - name: Install Dependencies
         run: flutter pub get
 
+      - name: Install Node.js and appdmg
+        run: |
+          brew install node
+          npm install -g appdmg
+
+      - name: Install flutter_distributor
+        run: dart pub global activate flutter_distributor
+
       - name: Build macOS Release
         run: flutter build macos --release
 
-      - name: Create .dmg File
+      - name: Package macOS Release with flutter_distributor
         run: |
-          APP_NAME="structogrammar"
-          BUILD_DIR="build/macos/Build/Products/Release/$APP_NAME.app"
-          DMG_DIR="$GITHUB_WORKSPACE/build/macos/dmg"
-          TMP_DIR="$GITHUB_WORKSPACE/tmp"
+          flutter_distributor package --platform macos --targets dmg
 
-          # Create the necessary directories
-          mkdir -p "$DMG_DIR"
-          mkdir -p "$TMP_DIR"
-
-          # Create an Applications alias
-          ln -s /Applications "$TMP_DIR/Applications"
-
-          # Copy the app to the temp directory
-          cp -R "$BUILD_DIR" "$TMP_DIR"
-
-          # Create the DMG with the app and the Applications alias
-          hdiutil create -volname "$APP_NAME" \
-                         -srcfolder "$TMP_DIR" \
-                         -ov -format UDZO "$DMG_DIR/$APP_NAME.dmg"
-
-      - name: Upload macOS Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: macos-dmg
-          path: build/macos/dmg/*.dmg
-
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
-        if: startsWith(github.ref, 'refs/tags/')
+      - name: Publish to GitHub Releases using flutter_distributor
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          files: build/macos/dmg/*.dmg
-          tag_name: ${{ github.ref_name }}
+        run: |
+          flutter_distributor publish \
+            --path dist/${{ github.ref_name }}/structogrammar-${{ github.ref_name }}-macos.dmg \
+            --targets github \
+            --github-repo-owner 'oxelf' \
+            --github-repo-name 'structogrammar'
