--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,6 +7,81 @@ on:
   workflow_dispatch:
 
 jobs:
+  build-and-release-linux:
+    runs-on: ubuntu-22.04
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
+      - name: Install dependencies
+        run: sudo apt-get install -y clang cmake ninja-build pkg-config libgtk-3-0 libgtk-3-dev libblkid1 liblzma5
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Enable linux build
+        run: flutter config --enable-linux-desktop
+      - name: Build artifacts
+        run: flutter build linux --release
+      - name: Archive Release
+        uses: thedoctor0/zip-release@master
+        with:
+          type: 'zip'
+          filename: structogrammar-${{github.ref_name}}-linux.zip
+          directory: build/linux/x64/release/bundle
+      - name: Linux Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: build/linux/x64/release/bundle/structogrammar-${{github.ref_name}}-linux.zip
+
+  build-and-release-windows:
+    runs-on: windows-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+          architecture: x64
+      - name: Install Inno Setup
+        run: choco install innosetup
+      - name: Install project dependencies
+        run: flutter pub get
+      - name: Enable windows build
+        run: flutter config --enable-windows-desktop
+      - name: Build artifacts
+        run: flutter build windows --release
+      - name: Create Inno Setup Script
+        run: |
+          echo '[Setup]' > setup.iss
+          echo 'AppName=Structogrammar' >> setup.iss
+          echo 'AppVersion=1.0' >> setup.iss
+          echo 'DefaultDirName={pf}\Structogrammar' >> setup.iss
+          echo 'DefaultGroupName=Structogrammar' >> setup.iss
+          echo 'OutputDir=Output' >> setup.iss
+          echo 'OutputBaseFilename=setup' >> setup.iss
+          echo 'Compression=lzma' >> setup.iss
+          echo 'SolidCompression=yes' >> setup.iss
+          echo '[Files]' >> setup.iss
+          echo 'Source: "build/windows/x64/runner/Release/structogrammar.exe"; DestDir: "{app}"; Flags: ignoreversion' >> setup.iss
+      - name: Create Inno Setup Installer
+        run: |
+          & 'C:\Program Files (x86)\Inno Setup 6\ISCC.exe' setup.iss
+      - name: Rename Installer
+        run: |
+          Rename-Item -Path Output/setup.exe -NewName structogrammar.exe
+      - name: Windows Release
+        uses: softprops/action-gh-release@v2
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: Output/structogrammar.exe
+
   build-and-release-macos:
     name: Build and Release macOS App
     runs-on: macos-latest
@@ -14,17 +89,6 @@ jobs:
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
-
-      - name: Set up Flutter SDK
-        run: |
-          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
-
-      - name: Flutter Version
-        run: flutter --version
-
-      - name: Install Dependencies
-        run: flutter pub get
 
       - name: Install Node.js and appdmg
         run: |
@@ -34,11 +98,7 @@ jobs:
       - name: Install flutter_distributor
         run: |
           dart pub global activate flutter_distributor
-          # Add flutter_distributor to the PATH
           echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
-
-      - name: Build macOS Release
-        run: flutter build macos --release
 
       - name: Package macOS Release with flutter_distributor
         run: |
@@ -51,7 +111,7 @@ jobs:
         run: |
           export PATH="$PATH:$HOME/.pub-cache/bin"
           flutter_distributor publish \
-            --path dist/${{ github.ref_name }}/structogrammar-${{ github.ref_name }}-macos.dmg \
+            --path dist/${{ github.ref_name }}/structogrammar-${{ github.ref_name }}+${{ github.ref_name }}-macos.dmg \
             --targets github \
             --github-repo-owner 'oxelf' \
             --github-repo-name 'structogrammar'
