--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -90,6 +90,17 @@ jobs:
       - name: Checkout Repository
         uses: actions/checkout@v4
 
+      - name: Set up Flutter SDK
+        run: |
+          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
+          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+
+      - name: Flutter Version
+        run: flutter --version
+
+      - name: Install Dependencies
+        run: flutter pub get
+
       - name: Install Node.js and appdmg
         run: |
           brew install node
@@ -97,7 +108,7 @@ jobs:
 
       - name: Install flutter_distributor
         run: |
-          dart pub global activate flutter_distributor
+          flutter pub global activate flutter_distributor
           echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
 
       - name: Package macOS Release with flutter_distributor
