--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,35 +43,32 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-      - uses: subosito/flutter-action@v2
-        with:
-          channel: 'stable'
-          architecture: x64
+      - name: Install Flutter
+        run: |
+          git clone https://github.com/flutter/flutter.git --branch stable --depth 1
+          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
       - name: Install Inno Setup
         run: choco install innosetup
-      - name: Install flutter_distributor
+      - name: Install Node.js and flutter_distributor
         run: |
-          dart pub global activate flutter_distributor
-          echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
+          choco install nodejs-lts
+          npm install -g flutter_distributor
       - name: Extract Version (Remove 'v' Prefix)
         id: version
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "VERSION=$VERSION" >> $GITHUB_ENV
+          $version = $env:GITHUB_REF -replace '^refs/tags/v', ''
+          echo "VERSION=$version" >> $env:GITHUB_ENV
       - name: Update Version in pubspec.yaml
         run: |
-          sed -i 's/^version: .*/version: '${{ env.VERSION }}'/' pubspec.yaml
-      - name: Build and Package Windows with flutter_distributor
-        run: |
-          export PATH="$PATH:$HOME/.pub-cache/bin"
-          flutter_distributor package --platform windows --targets exe
-      - name: Publish Windows Release
+          $version = $env:VERSION
+          (Get-Content pubspec.yaml) -replace '^version: .+', "version: $version" | Set-Content pubspec.yaml
+      - name: Package and Publish Windows Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          export PATH="$PATH:$HOME/.pub-cache/bin"
+          flutter_distributor package --platform windows --targets exe
           flutter_distributor publish \
-            --path dist/${{ env.VERSION }}/structogrammar-${{ env.VERSION }}+${{ env.VERSION }}-windows.exe \
+            --path dist/${{ env.VERSION }}/structogrammar-${{ env.VERSION }}-windows.exe \
             --targets github \
             --github-repo-owner 'oxelf' \
             --github-repo-name 'structogrammar'
