--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,25 +43,35 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
       - name: Install Flutter
         run: |
           git clone https://github.com/flutter/flutter.git --branch stable --depth 1
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $GITHUB_PATH
+          echo "$GITHUB_WORKSPACE/flutter/bin" >> $env:PATH
+          echo "Flutter path added to PATH: $env:PATH"
+
       - name: Install Inno Setup
         run: choco install innosetup
+
       - name: Install Node.js and flutter_distributor
         run: |
           choco install nodejs-lts
-          flutter pub global activate flutter_distributor
+          npm install -g flutter_distributor
+
+      - name: Refresh Environment
+        run: refreshenv
+
       - name: Extract Version (Remove 'v' Prefix)
         id: version
         run: |
           $version = $env:GITHUB_REF -replace '^refs/tags/v', ''
           echo "VERSION=$version" >> $env:GITHUB_ENV
+
       - name: Update Version in pubspec.yaml
         run: |
           $version = $env:VERSION
           (Get-Content pubspec.yaml) -replace '^version: .+', "version: $version" | Set-Content pubspec.yaml
+
       - name: Package and Publish Windows Release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
