--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Install Flutter
         run: |
           git clone https://github.com/flutter/flutter.git --branch stable --depth 1
-          echo "$GITHUB_WORKSPACE/flutter/bin" >> $env:PATH
-          echo "Flutter path added to PATH: $env:PATH"
+          setx PATH "%PATH%;%GITHUB_WORKSPACE%\\flutter\\bin"
+          echo "Flutter path added to PATH."
 
       - name: Install Inno Setup
         run: choco install innosetup
