fix flutter_distributor not activating

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
       - name: Install Node.js and flutter_distributor
         run: |
           choco install nodejs-lts
-          npm install -g flutter_distributor
+          flutter pub global activate flutter_distributor
 
       - name: Refresh Environment
         run: refreshenv
