--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -82,10 +82,7 @@ jobs:
         shell: pwsh
         run: |
           flutter_distributor publish \
-            --path dist/${{ env.VERSION }}/structogrammar-${{ env.VERSION }}+${{ env.VERSION }}-windows.exe \
-            --targets github \
-            --github-repo-owner 'oxelf' \
-            --github-repo-name 'structogrammar'
+            --path dist/${{ env.VERSION }}/structogrammar-${{ env.VERSION }}+${{ env.VERSION }}-windows.exe --targets github --github-repo-owner 'oxelf' --github-repo-name 'structogrammar'
 
   build-and-release-macos:
     name: Build and Release macOS App
