updated repo description

--- a/windows/packaging/exe/make_config.yaml
+++ b/windows/packaging/exe/make_config.yaml
@@ -1,7 +1,7 @@
 # The value of AppId uniquely identifies this application.
 # Do not use the same AppId value in installers for other applications.
 app_id: 5B599538-42B2-4826-A479-AF079F21A65D
-publisher: LeanFlutter
+publisher: structogrammar
 publisher_url: https://github.com/oxelf/structogrammar
 display_name: structogrammar
 create_desktop_icon: true
