multi language support, en and de for now, add struct inside, and save and import structograms has been added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,3 +53,6 @@ flutter_launcher_icons:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/translation/en.json
+    - assets/translation/de.json
