added delete deployments to web workflow

--- a/.github/workflows/web.yml
+++ b/.github/workflows/web.yml
@@ -6,6 +6,17 @@ on:
       - main
 
 jobs:
+  cleanup:
+    runs-on: ubuntu-latest
+    permissions: write-all
+
+    steps:
+      - name: 🗑 Delete deployment
+        uses: strumwolf/delete-deployment-environment@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          environment: github-pages
+          onlyRemoveDeployments: true
   build:
     name: Build Web
     runs-on: ubuntu-latest
